--- a/facebook-login.css
+++ b/facebook-login.css
@@ -6,17 +6,27 @@ body{
     background-color: rgb(240,242,245);
 }
 
-img{
+/* img{
     width: 20%;
     height: 79px;
     margin-top: 50px;
+} */
+
+h1{
+    /* width: 20%;
+    height: 79px; */
+    margin-top: 50px;
+    font-size: 50px;
+    color: rgb(8,102,255);
+    margin-bottom: 7px;
+    font-weight: bold;
 }
 main{
     width: 100%;
     /* border: 2px solid red; */
     display: flex;
     justify-content: center;
-    height: 80vh;
+    height: 75vh;
 
     
     
@@ -32,6 +42,7 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.688); /* *Set shadow properties */;
 }
 
 input,button{
